test/parser/positive/Package.java
package dovs.joos.features;

public class Package {
  public Package() {}
  protected int x;
}
