test/parser/negative/PackagePrivateMethods.java
package dovs.joos.features;

public class PackagePrivateMethods {
    public PackagePrivateMethods(){}
  /* package private */ int m() {
    return 42;
  }
}
